--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -9,4 +9,60 @@
 .inner{
     height: 100%;
     width: 1150px; 
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search{
+    position: relative;
+    height: 46px;
+    width: 361px;
+    display: flex;
+    align-items: center;
+    background-color: rgb(241 241 242);
+    border-radius: 92px;
+    border: 1.5px solid transparent;
+
+    &::after{
+        content: "";   
+        right: 48px; 
+        height: 28px;
+        position: absolute;
+        border: 0.7px solid rgb(215 215 217);
+    }
+    &:focus-within{
+        border-color: rgb(197 198 201) ;
+    }
+}
+
+.search input{
+    flex: 1;
+    font-size: 1.6rem;
+    height: 100%;
+    padding: 12px 16px;
+    color: var(--black);
+    background-color: transparent;
+    caret-color: var(--primary-color);
+}
+
+.clear, 
+.loading{
+    font-size: 1.5rem;
+    color: rgb(166 167 171);
+    position: absolute;
+    right: 60px;
+}
+
+.search-btn{
+    font-size: 2rem;
+    color: rgb(77 78 87);
+    padding: 10px 16px 10px 12px;
+    border-bottom-right-radius: 92px;
+    border-top-right-radius: 92px;
+
+    &:hover {
+        cursor: pointer;
+        background-color: rgba(22, 24, 35, .06);
+    }
 }
