--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -6,6 +6,7 @@
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
     --black: #000;
+    --second-color: rgb(138 139 144);
 }
 
 * {
