change menuItems onClick

--- a/src/component/Button/Button.module.scss
+++ b/src/component/Button/Button.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
     min-width: 100px;
-    padding: 9px 16px;
+    padding: 8px 16px;
     border-radius: 4px;
     font-size: 1.5rem;
     font-weight: 600;
@@ -22,6 +22,11 @@
 .icon + .title,
 .title + .icon {
     margin-left: 8px;
+}
+
+.icon {
+    display: inline-block;
+    width: 24px;
 }
 
 .rounded {
