--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -7,6 +7,7 @@
     --default-layout-width: 1150px;
     --black: #000;
     --white-color: #fff;
+    --text-color: rgb(22, 24, 35);
     --second-color: rgb(138 139 144);
 }
 
