--- a/src/component/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/component/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -1,4 +1,4 @@
-.wrapper{
+.wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,6 +7,7 @@
 .container {
     width: var(--default-layout-width);
     display: flex;
+    padding: 0 24px 0 20px;
 }
 
 .contain {
