--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -82,10 +82,26 @@
     font-size: 1.4rem;
     font-weight: 400;
 }
-
+// Action
 .action {
     display: flex;
     align-items: center;
+}
+.action-btn {
+    width: 22px;
+    height: 22px;
+    color: rgba(22, 24, 35, 1);
+    padding: 4px 12px;
+    background: transparent;
+    cursor: pointer;
+}
+
+.user-avatar {
+    border-radius: 50%;
+    width: 3.2rem;
+    margin-left: 12px;
+    object-fit: cover;
+    cursor: pointer;
 }
 
 // More-btn
