--- a/src/component/Layout/components/Popper/Menu/Menu.module.scss
+++ b/src/component/Layout/components/Popper/Menu/Menu.module.scss
@@ -15,6 +15,10 @@
     cursor: pointer;
     line-height: 2rem;
 
+    &.separate {
+        border-top: 1px solid rgba(22, 24, 35, 0.12);
+    }
+
     &:hover {
         background: rgba(22, 24, 35, 0.03);
     }
