--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -15,73 +15,6 @@
     justify-content: space-between;
 }
 
-.search,
-.search-result {
-    width: 415px;
-}
-
-.search {
-    position: relative;
-    height: 46px;
-    display: flex;
-    align-items: center;
-    background-color: rgb(241 241 242);
-    border-radius: 92px;
-    border: 1.5px solid transparent;
-
-    input {
-        flex: 1;
-        font-size: 1.6rem;
-        height: 100%;
-        padding: 12px 16px;
-        color: var(--black);
-        background-color: transparent;
-        caret-color: var(--primary-color);
-    }
-
-    input:not(:placeholder-shown) ~ .search-btn {
-        color: rgba(22, 24, 35, 0.75);
-    }
-
-    &::after {
-        content: '';
-        right: 48px;
-        height: 28px;
-        position: absolute;
-        border: 0.7px solid rgb(215 215 217);
-    }
-    &:focus-within {
-        border-color: var(--second-color);
-    }
-}
-
-.clear,
-.loading {
-    font-size: 1.5rem;
-    color: rgb(166 167 171);
-    position: absolute;
-    right: 60px;
-}
-
-.search-btn {
-    font-size: 2rem;
-    color: rgb(166 167 171);
-    padding: 10px 16px 10px 12px;
-    border-bottom-right-radius: 92px;
-    border-top-right-radius: 92px;
-
-    &:hover {
-        cursor: pointer;
-        background-color: rgba(22, 24, 35, 0.06);
-    }
-}
-
-.search-title {
-    padding: 5px 12px;
-    color: var(--second-color);
-    font-size: 1.4rem;
-    font-weight: 400;
-}
 // Action
 .action {
     display: flex;
@@ -92,6 +25,7 @@
     padding: 4px 12px;
     background: transparent;
     cursor: pointer;
+    position: relative;
 }
 
 .user-avatar {
@@ -100,6 +34,21 @@
     margin-left: 12px;
     object-fit: cover;
     cursor: pointer;
+}
+
+.badge {
+    position: absolute;
+    top: -3px;
+    right: 0px;
+    padding: 0px 6px;
+    height: 2rem;
+    line-height: 2rem;
+    border-radius: 10px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: var(--white-color);
+    font-family: 'ProximaNova', sans-serif;
+    background-color: var(--primary-color);
 }
 
 // More-btn
