call api tiktok, render accountItem component, path Profile, oncliclk button search, loading

--- a/src/component/Layout/components/AccountItem/AccountItem.module.scss
+++ b/src/component/Layout/components/AccountItem/AccountItem.module.scss
@@ -3,6 +3,7 @@
     align-items: center;
     padding: 9px 16px;
     cursor: pointer;
+    color: var(--text-color);
 
     &:hover {
         background-color: rgba(22, 24, 35, 0.03);
