--- a/src/component/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/component/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -5,6 +5,7 @@
 }
 
 .container {
+    margin-top: var(--default-layout-header-height);
     width: var(--default-layout-width);
     display: flex;
     padding: 0 24px 0 20px;
