--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -1,6 +1,9 @@
 .wrapper {
+    position: fixed;
+    z-index: 10;
     width: 1440px;
-    height: var(--default-layout-header-height, 60px);
+    height: var(--default-layout-header-height);
+    background-color: var(--white-color);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     display: flex;
     justify-content: center;
@@ -13,6 +16,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.tiktok-logo {
+    display: flex;
+}
+
+.custom-logo {
+    padding-right: 182px;
 }
 
 // Action
@@ -47,7 +58,7 @@
     font-size: 1.4rem;
     font-weight: 600;
     color: var(--white-color);
-    font-family: 'ProximaNova', sans-serif;
+    font-family: var(--font-family-);
     background-color: var(--primary-color);
 }
 
