--- a/src/component/Layout/components/Search/Search.module.scss
+++ b/src/component/Layout/components/Search/Search.module.scss
@@ -17,9 +17,10 @@
         font-size: 1.6rem;
         height: 100%;
         padding: 12px 16px;
-        color: var(--black);
+        color: rgba(22, 24, 35, 1);
         background-color: transparent;
         caret-color: var(--primary-color);
+        font-family: var(--font-family);
     }
 
     input:not(:placeholder-shown) ~ .search-btn {
