--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -16,7 +16,7 @@
         flex: 1;
         font-size: 1.6rem;
         height: 100%;
-        padding: 12px 16px;
+        padding: 12px 40px 12px 16px;
         color: rgba(22, 24, 35, 1);
         background-color: transparent;
         caret-color: var(--primary-color);
