Create AccountItem Sidebar

--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -3,7 +3,7 @@
 :root {
     --primary-color: rgb(254 44 85);
     --default-layout-header-height: 60px;
-    --default-layout-width: 1150px;
+    // --default-layout-width: 1150px;
     --black: #000;
     --white-color: #fff;
     --text-color: rgb(22, 24, 35);
