--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -6,10 +6,11 @@
 
 .container {
     margin-top: var(--default-layout-header-height);
-    width: var(--default-layout-width);
+    // width: var(--default-layout-width);
+    // padding: 0 24px 0 20px;
+    width: 100%;
     max-width: 100%;
     display: flex;
-    padding: 0 24px 0 20px;
 }
 
 .contain {
