--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -1,7 +1,8 @@
 .wrapper {
     position: fixed;
     z-index: 10;
-    width: 1440px;
+    // width: 1440px;
+    width: 100%;
     height: var(--default-layout-header-height);
     background-color: var(--white-color);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
@@ -11,7 +12,8 @@
 
 .inner {
     height: 100%;
-    width: 1150px;
+    // width: 1150px;
+    width: 100%;
     padding: 0 24px 0 20px;
     display: flex;
     align-items: center;
