--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -15,5 +15,9 @@
 
 .contain {
     display: flex;
-    flex: 1;
+    justify-content: center;
+    flex: 1 1;
+    max-width: 100%;
+    padding-left: 240px;
+    transition: all 0.4s cubic-bezier(0.65, 0, 0.35, 1);
 }
