--- a/src/layouts/components/Sidebar/Sidebar.module.scss
+++ b/src/layouts/components/Sidebar/Sidebar.module.scss
@@ -1,5 +1,29 @@
 .wrapper {
-    min-height: 1000px;
-    width: 232px;
-    padding: 20px 0 26px 8px;
+    position: fixed;
+    width: 240px;
+    top: 61px;
+    bottom: 0;
+    padding: 20px 8px 26px 8px;
+    background: rgb(255 255 255);
+    overflow-x: hidden;
+
+    &::-webkit-scrollbar {
+        background-color: transparent;
+        width: 0px;
+    }
+
+    &:hover {
+        &::-webkit-scrollbar {
+            border-radius: 0;
+            width: 6px;
+        }
+        &::-webkit-scrollbar-thumb {
+            border-radius: 4px;
+            background-color: rgba(22, 24, 35, 0.06);
+        }
+        &::-webkit-scrollbar-track {
+            border-radius: 0;
+            background-color: rgba(0, 0, 0, 0);
+        }
+    }
 }
