--- a/src/pages/Home/RecomendListItem/RecommendListItem.module.scss
+++ b/src/pages/Home/RecomendListItem/RecommendListItem.module.scss
@@ -102,12 +102,7 @@
     object-fit: cover;
 }
 
-.recommend-video-content {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
+.recommend-video-content,
 .recommend-video {
     width: 100%;
     height: 100%;
