create comp profile, fix bug

--- a/src/pages/Home/RecomendListItem/RecommendListItem.module.scss
+++ b/src/pages/Home/RecomendListItem/RecommendListItem.module.scss
@@ -20,6 +20,7 @@
 }
 
 .recommend-name {
+    color: #000;
     font-weight: 700;
     font-size: 17px;
     line-height: 25px;
@@ -42,6 +43,7 @@
 }
 
 .recommend-nickname {
+    color: #000;
     font-weight: 400;
     font-size: 14px;
     display: inline-block;
