--- a/src/pages/VideoDetails/VideoDetail.module.scss
+++ b/src/pages/VideoDetails/VideoDetail.module.scss
@@ -174,64 +174,41 @@
         background-color: rgba(37, 37, 37, 0.6);
     }
 }
-
-.volume_btn {
+.btn_voice {
     position: absolute;
-    z-index: 1;
     bottom: 20px;
     right: 20px;
-    background: none rgba(84, 84, 84, 0.5);
-    outline: none;
-    padding: 8px;
-    display: flex;
-    transition: opacity 0.3s ease 0s;
-    cursor: pointer;
+    z-index: 10;
     line-height: 0;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    color: var(--white-color);
-    display: none;
-}
-
-.muted_btn {
-    position: absolute;
-    z-index: 1;
-    bottom: 20px;
-    right: 20px;
-    background: none rgba(84, 84, 84, 0.5);
-    outline: none;
     padding: 8px;
-    display: flex;
-    transition: opacity 0.3s ease 0s;
-    cursor: pointer;
-    line-height: 0;
+    background: none rgba(84, 84, 84, 0.5);
     border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    color: var(--white-color);
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: opacity 0.3s ease 0s;
     &:hover {
         opacity: 0, 7;
         background-color: rgba(37, 37, 37, 0.6);
-
-        ~ .volume_control {
-            opacity: 1;
-        }
+        color: rgba(37, 37, 37, 0.6);
+    }
+    &:hover ~ .volume_control {
+        opacity: 1;
     }
 }
 
 .volume_control {
+    display: flex;
     align-items: center;
     background-color: rgba(84, 84, 84, 0.502);
     border-radius: 20px;
     bottom: 103px;
     cursor: pointer;
-    display: flex;
     height: 27px;
     justify-content: center;
     opacity: 0;
     position: absolute;
-    right: -8px;
+    right: -9px;
     -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
     transition: opacity 0.3s ease 0s;
@@ -291,6 +268,7 @@
 .user_wrapper {
     display: flex;
     align-items: center;
+    color: rgba(22, 24, 35, 1);
 }
 
 .user_img {
