--- a/src/pages/VideoDetails/VideoDetail.module.scss
+++ b/src/pages/VideoDetails/VideoDetail.module.scss
@@ -174,6 +174,11 @@
         background-color: rgba(37, 37, 37, 0.6);
     }
 }
+
+.none {
+    display: none;
+}
+
 .btn_voice {
     position: absolute;
     bottom: 20px;
